--- a/index.html
+++ b/index.html
@@ -6,11 +6,43 @@
     <title>Cornerstone - Images Site</title>
   </head>
   <body>
-    <h1>Using Images on your Webpage</h1>
-    <h2>Cat gifs</h2>
-    <img src="https://media3.giphy.com/media/13CoXDiaCcCoyk/giphy.gif" width=200
-         alt="Cat Shaking Hindquarters, Cutting to Shaq Shaking Shoulders"
-         title="Cat/Shaq Showdown">
-    <h2></h2>
+    <header>
+    <h1>torbray's Profile Page</h1>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="#gifs">Cat Gifs</a></li>
+        <li><a href="#social">Social Media</a></li>
+      </ul>
+    </nav>
+    <section id="gifs">
+      <h2>Cat Gifs</h2>
+      <table>
+        <tr>
+          <th>Cat/Shaq Showdown</th>
+          <th>Cat/Man Highfive</th>
+        </tr>
+        <tr>
+          <td>
+            <img src="images/catshaq.gif" width=200
+                 alt="Cat Shaking Hindquarters, Cutting to Shaq Shaking Shoulders"
+                 title="Cat/Shaq Showdown">
+          </td>
+          <td>
+            <img src="images/cm47cat.gif" width=200
+                 alt="CM47 Receiving Highfive from Snowflake"
+                 title="Cat/Man Beautiful Highfive">
+          </td>
+        </tr>
+      </table>
+    </section>
+    <section id="social">
+      <h2>Social Media</h2>
+      <ul>
+        <li>YouTube - <a href="https://youtube.com/torbray00">torbray00</a></li>
+        <li>Twitter - <a href="https://twitter.com/torbray00">@torbray00</a></li>
+        <li>Twitch - <a href="https://twitch.com/torbray00">torbray00</a></li>
+      </ul>
+    </section>
   </body>
 </html>
