--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-    <h1>torbray's Profile Page</h1>
+      <h1>torbray's Profile Page</h1>
     </header>
     <nav>
       <ul>
@@ -21,6 +21,10 @@
         <tr>
           <th>Cat/Shaq Showdown</th>
           <th>Cat/Man Highfive</th>
+        </tr>
+        <tr>
+          <td><a href="images/catshaq.gif" download>Download</a></td>
+          <td><a href="images/cm47cat.gif" download>Download</a></td>
         </tr>
         <tr>
           <td>
@@ -39,10 +43,15 @@
     <section id="social">
       <h2>Social Media</h2>
       <ul>
-        <li>YouTube - <a href="https://youtube.com/torbray00">torbray00</a></li>
-        <li>Twitter - <a href="https://twitter.com/torbray00">@torbray00</a></li>
-        <li>Twitch - <a href="https://twitch.com/torbray00">torbray00</a></li>
+        <li>YouTube - <a href="https://youtube.com/torbray00" target="_blank">torbray00</a></li>
+        <li>Twitter - <a href="https://twitter.com/torbray00" target="_blank">@torbray00</a></li>
+        <li>Twitch - <a href="https://twitch.com/torbray00" target="_blank">torbray00</a></li>
+        <li><a href="page2.html">Page 2</a></li>
       </ul>
+      <p>
+        For all business enquiries, email me at
+          <a href="mailto:torbray@gmail.com?Subject=Cat Feedback">torbray@gmail.com</a>
+      </p>
     </section>
   </body>
 </html>
