Alpha v0.4.0 - Marble Cake

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
         <tr>
           <th>Cat/Shaq Showdown</th>
           <th>Cat/Man Highfive</th>
+          <th>Marble Cake</th>
         </tr>
         <tr>
           <td><a href="images/catshaq.gif" download>Download</a></td>
           <td><a href="images/cm47cat.gif" download>Download</a></td>
+          <td><a href="marble-cake.jpeg" download>Download</a></td>
         </tr>
         <tr>
           <td>
@@ -36,6 +38,11 @@
             <img src="images/cm47cat.gif" width=200
                  alt="CM47 Receiving Highfive from Snowflake"
                  title="Cat/Man Beautiful Highfive">
+          </td>
+          <td>
+            <img src="images/marble-cake.jpeg" width=200
+                 alt="Marble Cake"
+                 title="Marble Cake">
           </td>
         </tr>
       </table>
