--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   </head>
   <body>
     <header>
-      <h1>torbray's Profile Page</h1>
+      <h1>torbray's Profile Page - Homepage</h1>
+      <div><a href="index.html">Page 1</a></div>
+      <div><a href="page2.html">Page 2</a></div>
     </header>
     <nav>
+      <h2>Navigation Sequence</h2>
       <ul>
         <li><a href="#gifs">Cat Gifs</a></li>
         <li><a href="#social">Social Media</a></li>
@@ -47,18 +50,17 @@
         </tr>
       </table>
     </section>
-    <section id="social">
+    <footer id="social">
       <h2>Social Media</h2>
       <ul>
         <li>YouTube - <a href="https://youtube.com/torbray00" target="_blank">torbray00</a></li>
         <li>Twitter - <a href="https://twitter.com/torbray00" target="_blank">@torbray00</a></li>
         <li>Twitch - <a href="https://twitch.com/torbray00" target="_blank">torbray00</a></li>
-        <li><a href="page2.html">Page 2</a></li>
       </ul>
       <p>
         For all business enquiries, email me at
           <a href="mailto:torbray@gmail.com?Subject=Cat Feedback">torbray@gmail.com</a>
       </p>
-    </section>
+    </footer>
   </body>
 </html>
