--- a/page2.html
+++ b/page2.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Second Page</title>
-</head>
-<body>
-<h1>Second Page</h1>
-</body>
+<html lang="en-gb">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewpoint" content="width=device-width">
+    <title>Cornerstone - Images Site</title>
+  </head>
+  <body>
+    <header>
+      <h1>torbray's Profile Page - Pg 2</h1>
+      <div><a href="index.html">Page 1</a></div>
+      <div><a href="page2.html">Page 2</a></div>
+    </header>
+    <footer id="social">
+      <h2>Social Media</h2>
+      <ul>
+        <li>YouTube - <a href="https://youtube.com/torbray00" target="_blank">torbray00</a></li>
+        <li>Twitter - <a href="https://twitter.com/torbray00" target="_blank">@torbray00</a></li>
+        <li>Twitch - <a href="https://twitch.com/torbray00" target="_blank">torbray00</a></li>
+      </ul>
+      <p>
+        For all business enquiries, email me at
+          <a href="mailto:torbray@gmail.com?Subject=Cat Feedback">torbray@gmail.com</a>
+      </p>
+    </footer>
+  </body>
 </html>
