--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       <h1>torbray's Profile Page - Homepage</h1>
       <div><a href="index.html">Page 1</a></div>
       <div><a href="page2.html">Page 2</a></div>
+      <h3>Today is my birthday! June 25</h3>
+      <div>yayyyyyyyyyyyyyy</div>
     </header>
     <nav>
       <h2>Navigation Sequence</h2>
