--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewpoint" content="width=device-width">
     <title>Cornerstone - Images Site</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <header>
       <h1>torbray's Profile Page - Homepage</h1>
-      <div><a href="index.html">Page 1</a></div>
-      <div><a href="page2.html">Page 2</a></div>
+      <nav>
+        <div><a href="index.html">Homepage</a></div>
+        <div><a href="page2.html">Page 2</a></div>
+      </nav>
       <h3>Today is my birthday! June 25</h3>
       <div>yayyyyyyyyyyyyyy</div>
     </header>
@@ -29,9 +32,9 @@
           <th>Marble Cake</th>
         </tr>
         <tr>
-          <td><a href="images/catshaq.gif" download>Download</a></td>
-          <td><a href="images/cm47cat.gif" download>Download</a></td>
-          <td><a href="marble-cake.jpeg" download>Download</a></td>
+          <td class="download"><a class="dl-text" href="images/catshaq.gif" download>Download</a></td>
+          <td class="download"><a class="dl-text"href="images/cm47cat.gif" download>Download</a></td>
+          <td class="download"><a class="dl-text" href="marble-cake.jpeg" download>Download</a></td>
         </tr>
         <tr>
           <td>
@@ -55,9 +58,9 @@
     <footer id="social">
       <h2>Social Media</h2>
       <ul>
-        <li>YouTube - <a href="https://youtube.com/torbray00" target="_blank">torbray00</a></li>
-        <li>Twitter - <a href="https://twitter.com/torbray00" target="_blank">@torbray00</a></li>
-        <li>Twitch - <a href="https://twitch.com/torbray00" target="_blank">torbray00</a></li>
+        <li id="youtube">YouTube - <a href="https://youtube.com/torbray00" target="_blank">torbray00</a></li>
+        <li id="twitter"> Twitter - <a href="https://twitter.com/torbray00" target="_blank">@torbray00</a></li>
+        <li id="twitch"> Twitch - <a href="https://twitch.com/torbray00" target="_blank">torbray00</a></li>
       </ul>
       <p>
         For all business enquiries, email me at
