--- a/page2.html
+++ b/page2.html
@@ -4,19 +4,22 @@
     <meta charset="utf-8">
     <meta name="viewpoint" content="width=device-width">
     <title>Cornerstone - Images Site</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <header>
       <h1>torbray's Profile Page - Pg 2</h1>
-      <div><a href="index.html">Page 1</a></div>
-      <div><a href="page2.html">Page 2</a></div>
+      <nav>
+        <div><a href="index.html">Homepage</a></div>
+        <div><a href="page2.html">Page 2</a></div>
+      </nav>
     </header>
     <footer id="social">
       <h2>Social Media</h2>
       <ul>
-        <li>YouTube - <a href="https://youtube.com/torbray00" target="_blank">torbray00</a></li>
-        <li>Twitter - <a href="https://twitter.com/torbray00" target="_blank">@torbray00</a></li>
-        <li>Twitch - <a href="https://twitch.com/torbray00" target="_blank">torbray00</a></li>
+        <li id="youtube">YouTube - <a href="https://youtube.com/torbray00" target="_blank">torbray00</a></li>
+        <li id="twitter"> Twitter - <a href="https://twitter.com/torbray00" target="_blank">@torbray00</a></li>
+        <li id="twitch"> Twitch - <a href="https://twitch.com/torbray00" target="_blank">torbray00</a></li>
       </ul>
       <p>
         For all business enquiries, email me at
