--- a/index.html
+++ b/index.html
@@ -8,61 +8,67 @@
   </head>
   <body>
     <header>
-      <h1>torbray's Profile Page - Homepage</h1>
+      <div class="header-grid">
+        <h1>torbray</h1>
+        <img src="images/profpic.png" width=60>
+      </div>
       <nav>
-        <div><a href="index.html">Homepage</a></div>
-        <div><a href="page2.html">Page 2</a></div>
+        <div class="nav-grid">
+          <div class="nav-item"><a href="index.html">Homepage</a></div>
+          <div class="nav-item"><a href="page2.html">Steam Stats</a></div>
+        </div>
+        <div id="saying">"What's chilling, dudes?"</div>
       </nav>
-      <h3>Today is my birthday! June 25</h3>
-      <div>yayyyyyyyyyyyyyy</div>
     </header>
-    <nav>
-      <h2>Navigation Sequence</h2>
-      <ul>
-        <li><a href="#gifs">Cat Gifs</a></li>
-        <li><a href="#social">Social Media</a></li>
-      </ul>
-    </nav>
-    <section id="gifs">
-      <h2>Cat Gifs</h2>
-      <table>
-        <tr>
-          <th>Cat/Shaq Showdown</th>
-          <th>Cat/Man Highfive</th>
-          <th>Marble Cake</th>
-        </tr>
-        <tr>
-          <td class="download"><a class="dl-text" href="images/catshaq.gif" download>Download</a></td>
-          <td class="download"><a class="dl-text"href="images/cm47cat.gif" download>Download</a></td>
-          <td class="download"><a class="dl-text" href="marble-cake.jpeg" download>Download</a></td>
-        </tr>
-        <tr>
-          <td>
-            <img src="images/catshaq.gif" width=200
-                 alt="Cat Shaking Hindquarters, Cutting to Shaq Shaking Shoulders"
-                 title="Cat/Shaq Showdown">
-          </td>
-          <td>
-            <img src="images/cm47cat.gif" width=200
-                 alt="CM47 Receiving Highfive from Snowflake"
-                 title="Cat/Man Beautiful Highfive">
-          </td>
-          <td>
-            <img src="images/marble-cake.jpeg" width=200
-                 alt="Marble Cake"
-                 title="Marble Cake">
-          </td>
-        </tr>
-      </table>
-    </section>
+      <nav>
+        <h2>Navigation Sequence</h2>
+        <div class="blue-border">
+          <ul>
+            <li><a href="#gifs">Cat Gifs</a></li>
+            <li><a href="#social">Social Media</a></li>
+          </ul>
+        </div>
+      </nav>
+      <section id="gifs">
+        <h2>Cat Gifs</h2>
+        <table>
+          <tr>
+            <th>Cat/Shaq Showdown</th>
+            <th>Cat/Man Highfive</th>
+            <th>Marble Cake</th>
+          </tr>
+          <tr>
+            <td class="download"><a class="dl-text" href="images/catshaq.gif" download>Download</a></td>
+            <td class="download"><a class="dl-text"href="images/cm47cat.gif" download>Download</a></td>
+            <td class="download"><a class="dl-text" href="marble-cake.jpeg" download>Download</a></td>
+          </tr>
+          <tr>
+            <td>
+              <img src="images/catshaq.gif" width=200
+                  alt="Cat Shaking Hindquarters, Cutting to Shaq Shaking Shoulders"
+                  title="Cat/Shaq Showdown">
+            </td>
+            <td>
+              <img src="images/cm47cat.gif" width=200
+                  alt="CM47 Receiving Highfive from Snowflake"
+                  title="Cat/Man Beautiful Highfive">
+            </td>
+            <td>
+              <img src="images/marble-cake.jpeg" width=200
+                  alt="Marble Cake"
+                  title="Marble Cake">
+            </td>
+          </tr>
+        </table>
+      </section>
     <footer id="social">
       <h2>Social Media</h2>
-      <ul>
+      <ul id="social-list">
         <li id="youtube">YouTube - <a href="https://youtube.com/torbray00" target="_blank">torbray00</a></li>
         <li id="twitter"> Twitter - <a href="https://twitter.com/torbray00" target="_blank">@torbray00</a></li>
         <li id="twitch"> Twitch - <a href="https://twitch.com/torbray00" target="_blank">torbray00</a></li>
       </ul>
-      <p>
+      <p class="closer">
         For all business enquiries, email me at
           <a href="mailto:torbray@gmail.com?Subject=Cat Feedback">torbray@gmail.com</a>
       </p>
