--- a/page2.html
+++ b/page2.html
@@ -16,7 +16,7 @@
     </header>
     <footer id="social">
       <h2>Social Media</h2>
-      <ul>
+      <ul id="social-list">
         <li id="youtube">YouTube - <a href="https://youtube.com/torbray00" target="_blank">torbray00</a></li>
         <li id="twitter"> Twitter - <a href="https://twitter.com/torbray00" target="_blank">@torbray00</a></li>
         <li id="twitch"> Twitch - <a href="https://twitch.com/torbray00" target="_blank">torbray00</a></li>
