Alpha v0.9.0 - YT Videos/ README.md

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewpoint" content="width=device-width">
-    <title>Cornerstone - Images Site</title>
+    <title>torbray | Homepage</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <header>
       <div class="header-grid">
         <h1>torbray</h1>
-        <img src="images/profpic.png" width=60>
+        <div class="prof-pic">
+          <img src="images/profpic.png" alt="torbray's profile picture">
+        </div>
       </div>
       <nav>
         <div class="nav-grid">
@@ -25,11 +27,33 @@
         <h2>Navigation</h2>
         <div class="blue-border">
           <ul>
+            <li><a href="#videos">YouTube Videos</a></li>
             <li><a href="#gifs">Cat Gifs</a></li>
             <li><a href="#social">Social Media</a></li>
           </ul>
         </div>
       </nav>
+      <section id="videos">
+        <h2>YouTube Videos</h2>
+        <div class="video-grid">
+          <figure>
+            <figcaption>Skyblock S3 LP - E1 A New Dawn</figcaption>
+            <div class="border-bot">
+              <img src="images/link.svg" width=8px>
+              <a href="https://youtu.be/METjFyG3g7Q" target="_blank">Link</a>
+            </div>
+            <iframe src="https://www.youtube.com/embed/METjFyG3g7Q" frameborder="0"></iframe>
+          </figure>
+          <figure>
+            <figcaption>Skyrim - Ep. 1 "The Keith in the North"</figcaption>
+            <div class="border-bot">
+              <img src="images/link.svg" width=8px>
+              <a href="https://youtu.be/METjFyG3g7Q" target="_blank">Link</a>
+            </div>
+            <iframe src="https://www.youtube.com/embed/ps5bN6nvGJs" frameborder="0"></iframe>
+          </figure>
+        </div>        
+      </section>
       <section id="gifs">
         <h2>Cat Gifs</h2>
         <div class="cat-gifs">
