--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewpoint" content="width=device-width">
-    <title>Cornerstone - Images Site</title>
+    <title>torbray | Game Corner</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/page2.css">
   </head>
@@ -11,7 +11,9 @@
   <header>
     <div class="header-grid">
       <h1>torbray</h1>
-      <img src="images/profpic.png" width=60>
+      <div class="prof-pic">
+        <img src="images/profpic.png" alt="torbray's profile picture">
+      </div>
     </div>
     <nav>
       <div class="nav-grid">
